--- a/ttt_backend/CMakeLists.txt
+++ b/ttt_backend/CMakeLists.txt
@@ -6,6 +6,7 @@ project(ttt_backend)
 # Find the QtWidgets library
 find_package(Qt5Widgets)
 find_package(Qt5Network)
+find_package(OpenCV REQUIRED )
 
 set(CMAKE_CXX_STANDARD 11)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
@@ -51,4 +52,5 @@ add_executable(ttt_backend ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(ttt_backend Qt5::Widgets)
 target_link_libraries(ttt_backend Qt5::Network)
 target_link_libraries(ttt_backend ttt_lib)
+target_link_libraries(ttt_backend ${OpenCV_LIBS} )
 
